--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -11,7 +11,7 @@ padding: 50px;
 }
 
 form{
-width:60%;
+width:40%;
 padding: 20px;
 display: flex;
 flex-direction: column;
