--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -14,6 +14,6 @@ color: white;
 
 .socialItemLink:hover{
     transition: all .2s ease-in-out;
-    transform: scale(1.1);
+    transform: scale(1.5);
     
 }
