--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -60,5 +60,6 @@ font-size: 22.5px;;
 .logopic {
     max-width: 40px;
     max-height: 40px;
+    padding-right: 20px;
 }
 
