--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,9 +1,3 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-
 body {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -25,10 +19,19 @@ body {
     padding: 15px;
 }
 h1{
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 20px;
     padding: 0px;}
+h2 {
+    color: black;
+    font-size: 1.5rem;
+
+
+    }
+
+
 .portfolio__content{
+    
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -49,15 +52,15 @@ h1{
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     border: 1px solid lightgray;
     border-radius: 6px;
-    padding: 45px;  
+    padding: 55px;  
     overflow:hidden;
     
     
 }
 h3{
-    padding: 3px;
+    
     font-style: bold;
-    margin: 0;
+    
 }
 
 
@@ -66,7 +69,7 @@ img {
     height: auto;
     object-fit: cover;
     max-width: 100%; 
-    margin-top: 10px
+    
     
 }
 
