--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -16,6 +16,7 @@ padding: auto;
 
 h2 {
 
+    color: white;
     margin: 10px;
     padding: 10px;
 }
